# tello-lab

./: .gitignore  README.md  pyproject.toml
demos/: 00_video_preview.py  01_keyboard_flight.py  02_face_detection.py  03_face_follow.py  04_hand_landmarks.py
src/tello_lab/: paths.py
src/tello_lab/control/: commands.py  keyboard.py  manual.py  pid.py  tracker.py
src/tello_lab/core/: drone.py  runtime.py  telemetry.py
src/tello_lab/ui/: overlay.py
src/tello_lab/vision/: face.py
tests/: test_pid.py
