[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tello-lab"
version = "0.1.0"
description = "A modular experimentation playground for DJI Tello demos."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Michal Maj" }
]
license = { text = "MIT" }
keywords = ["dji", "tello", "drone", "computer-vision", "opencv", "robotics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
  "djitellopy>=2.5.0,<3.0.0",
  "numpy>=2.0.0,<3.0.0",
  "opencv-python>=4.13.0,<5.0.0",
  "PyYAML>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
vision = [
  "mediapipe>=0.10.33,<0.11.0",
]
yolo = [
  "ultralytics>=8.4.38,<9.0.0",
]

dev = [
  "pytest>=8.0.0,<9.0.0",
  "ruff>=0.6.0,<1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"